# C-Cmake-Template

./: CMakeLists.txt  LICENSE  README.md  cpp.bat
scripts/: build.bat  clean.bat  run.bat
src/: main.cpp
src/core/: ecs.cpp  ecs.h
